<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthMenu">

    <!--  Guidelines  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/_4gr" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/_2gr" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/_1gr" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/_4gr_fb" />

    <!--  Views  -->
    <Button
        android:id="@+id/btnSkip"
        style="@style/btnSkip"
        android:layout_width="@dimen/_100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_24dp"
        android:text="@string/lbl_skip"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline_1"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/logoPapyTextbelow"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dsc_logo_papy_textbelow"
        app:layout_constraintBottom_toTopOf="@id/guideline_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_1"
        app:srcCompat="@drawable/logo_papy_textbelow" />

    <LinearLayout
        android:id="@+id/titleContainer"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_48dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/guideline_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtBigTitle"
            style="@style/txtRobotobold32_Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_login" />

        <TextView
            android:id="@+id/txtSubtitle"
            style="@style/txtRobotolight16_Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:text="@string/msg_to_have_better_exp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGoogleLogin"
        style="@style/btnGoogleLogin"
        android:layout_width="@dimen/_320dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_48dp"
        android:layout_marginTop="@dimen/_32dp"
        android:drawableStart="@drawable/circle_icon_google"
        android:drawableEnd="@drawable/icon_arrow"
        android:paddingHorizontal="@dimen/_16dp"
        android:paddingVertical="@dimen/_4dp"
        android:text="@string/msg_continue_with_google"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_3" />

    <Button
        android:id="@+id/btnEmailLogin"
        style="@style/btnNavLoginPage"
        android:layout_width="@dimen/_256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12dp"
        android:paddingHorizontal="@dimen/_16dp"
        android:text="@string/msg_use_email_or_phone"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogleLogin" />

    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="@dimen/_256dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_4">

        <TextView
            android:id="@+id/txtNotHaveAccount"
            style="@style/txtRobotoregular16_Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/msg_not_have_account"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/navToRegister"
            style="@style/txtRobotobold16_Peach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="@dimen/_8dp"
            android:paddingVertical="@dimen/_16dp"
            android:text="@string/lbl_register_link"
            android:textAlignment="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>